@@ -12,7 +12,7 @@
         </item>
         <item>
             <key> <string>__name__</string> </key>
-            <value> <string>currency_list.ods</string> </value>
+            <value> <string>standard_currency_list.ods</string> </value>
         </item>
         <item>
             <key> <string>content_type</string> </key>
