@@ -1,4 +1,7 @@
 2011-04-01 lucas
+* Renamed currency_list.ods to standard_currency_list.ods
+
+2011-04-01 lucas
 * Remove short_title.
 
 2011-04-01 lucas
