@@ -1,3 +1,6 @@
+2011-04-01 lucas
+* Renamed currency_list.ods to standard_currency_list.ods
+
 2011-03-30 lucas
 * Anonymous can not view the Configurator Tool.
 
